# lib-message-integration

./: .gitignore  NOTICES  README.md
example-acord/: Makefile  README.md  daml-project.mk  daml.yaml
example-acord/acord-models/: Makefile  daml.yaml
example-acord/acord-models/daml/: Main.daml
example-acord/app/: build.sbt  repl.init
example-acord/app/project/: DamlPlugin.scala
example-acord/daml/: Main.daml
example-acord/daml/Role/: Operator.daml
example-acord/daml/TXLife/: TXLife.daml
example-acord/ledger-setup/: Makefile  daml.yaml
example-acord/models/: daml.yaml
example-acord/models/daml/: Main.daml
example-cdm/: daml.yaml
example-fpml-clearing-java/: .gitignore  .navigator.conf  README.md  da.yaml  daml.yaml
example-fpml-clearing-java/app/: build.sbt
example-fpml-clearing-java/daml/: Main.daml
example-fpml-clearing-java/daml/Process/: Novation.daml
example-fpml-clearing-java/daml/Role/: ClearingHouse.daml  ClearingMember.daml  Client.daml  Operator.daml
example-fpml-clearing-java/daml/Util/: Messages.daml
example/cdm/: README.md  daml.yaml
example/cdm/common-domain-model/: model-cdm-aliases.rosetta  model-cdm-calculations-csa.rosetta  (+25 more)
lib-integration-java/: README.md  pom.xml
lib-integration-python/: Makefile  Pipfile  README.md  setup.py  test.py
lib-integration-python/src/: __main__.py
tool-metagen/: .hlint.yaml  README.md  TODO  default.nix  metagen.cabal  metagen.nix
tool-metagen/src/: Main.hs
tool-metagen/src/DA/CDM/Rosetta/: Convert.hs  Metadata.hs  Parse.hs  Schema.hs  Static.hs
tool-metagen/src/DA/Daml/: GenDaml.hs  TypeModel.hs
tool-metagen/src/DA/Metagen/: Metadata.hs
tool-metagen/src/DA/Swagger/: Parse.hs  Schema.hs
tool-metagen/src/DA/XML/Schema/: Convert.hs  Metadata.hs  Parse.hs  Schema.hs
tool-metagen/tx-target/daml/TXLife/V1/: TXLife.daml
(+663 files in other folders)
